<resources>
    <string name="app_name">E-Commerce Demo</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">CompanyName</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_myorders">My Orders</string>
    <string name="menu_share">Share</string>
    <string name="menu_cart">Cart</string>
</resources>
